--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link id="icon" rel="icon" href="<%= BASE_URL %>">
-    <link rel="stylesheet" href="./css/iconfont.css">
+    <link rel="stylesheet" href="/css/iconfont.css">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
